[package]
name = "agrona-collections"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance primitive collections for HFT applications"

[dependencies]
agrona-core = { path = "../agrona-core" }
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
static_assertions.workspace = true

[[bench]]
name = "int_hash_map"
harness = false

[features]
default = ["std"]
std = ["agrona-core/std"]